objects/vlocity_cmt__BusinessSite__c.object
<CustomObject>
    <description>Store Locations track the retail and customer service locations where customers may obtain products or services from your organization or your partner organizations. This information can be used to provide a Store Locator feature on a customer website. A store location advertises its location by address and geolocation as well as its hours of operation. Store locations are operated by a company brand or an authorized dealer which must be defined as a partner account or an internal organization account.</description>
    <fields>
        <fullName>vlocity_cmt__City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Country__c</fullName>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Geolocation__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OperatingHoursId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operating Hours</label>
        <referenceTo>vlocity_cmt__OperatingHours__c</referenceTo>
        <relationshipLabel>Store Locations</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrganizationId__c</fullName>
        <description>Defines the internal brand or authorized dealer that operates this store or customer service location.</description>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Store Locations</relationshipLabel>
        <relationshipName>OrganizationSites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PostalCode__c</fullName>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StreetAddress__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Store Location</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Store Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>